separator: fix styles in flex context | flex: reset all gap properties on the element

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -49,6 +49,9 @@ nu-flex {
   --nu-width: initial;
   --nu-height: initial;
   --nu-gap: 0;
+  --nu-flow-gap: 0;
+  --nu-h-gap: 0;
+  --nu-v-gap: 0;
 
   display: flex;
   flex-flow: var(--nu-flow);
